--- a/demo.html
+++ b/demo.html
@@ -482,7 +482,9 @@ Reveal.on( 'customevent', function() {
 				pdfMaxPagesPerSlide: 1,
 				
 				// Register plugins
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath, RevealSearch, RevealZoom ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath, RevealSearch, RevealZoom ],
+
+				maxScale: 1,
 			});
 
 			// Custom event example
